--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portafolio_dsc",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://edward997.github.io/Portafolio-DSC",
+  "homepage": "https://edward997.github.io/Portafolio-DSC",
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
@@ -16,9 +16,6 @@
     "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.22",
     "@types/react-router-dom": "^5.3.3",
-    "chakra-ui-carousel": "^1.0.14",
-    "framer-motion": "^11.0.23",
-    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
@@ -29,9 +26,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -53,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
