--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "portafolio_dsc",
   "version": "0.1.0",
-  "private": true,
   "homepage": "https://edward997.github.io/Portafolio-DSC",
+  "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -b gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
